# momentos

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: database.py  gcp_utils.py  main.py  models.py  seed_data.py
scripts/: deploy.py  sync_db_to_gcp.py
static/css/: style.css
static/js/: albums.js  gallery.js
templates/: about.html  albums.html  base.html  index.html  photo_detail.html  photo_edit_form.html  photo_grid.html  upload.html
