[project]
name = "photo-gallery"
version = "0.1.0"
description = "A lightweight VSCO-style photo gallery built with FastAPI and HTMX"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "jinja2>=3.1.3",
    "aiofiles>=23.2.1",
    "python-multipart>=0.0.6",
    "pillow>=10.2.0",
    "google-cloud-storage>=3.9.0",
    "python-dotenv>=1.2.1",
]

[tool.uv]
dev-dependencies = []

[project.scripts]
dev = "uvicorn app.main:app --reload"
